bpf selftest fix

--- a/tools/testing/selftests/bpf/Makefile
+++ b/tools/testing/selftests/bpf/Makefile
@@ -569,9 +569,14 @@ ifneq ($2:$(OUTPUT),:$(shell pwd))
 	$(Q)rsync -aq $$^ $(TRUNNER_OUTPUT)/
 endif
 
+ifneq ($(TRUNNER_EXTRA_DEP),,)
+$(TRUNNER_EXTRA_DEP): $(TRUNNER_TEST_OBJS) $(RESOLVE_BTFIDS)
+endif
+
 $(OUTPUT)/$(TRUNNER_BINARY): $(TRUNNER_TEST_OBJS)			\
 			     $(TRUNNER_EXTRA_OBJS) $$(BPFOBJ)		\
 			     $(RESOLVE_BTFIDS)				\
+			     $(TRUNNER_EXTRA_DEP)			\
 			     $(TRUNNER_BPFTOOL)				\
 			     | $(TRUNNER_BINARY)-extras
 	$$(call msg,BINARY,,$$@)
@@ -581,6 +586,11 @@ $(OUTPUT)/$(TRUNNER_BINARY): $(TRUNNER_TEST_OBJS)			\
 		   $(OUTPUT)/$(if $2,$2/)bpftool
 
 endef
+
+$(OUTPUT)/resolve_btfids_section.o:
+	$(Q)$(RESOLVE_BTFIDS) --btf $(OUTPUT)/btf_data.bpf.o --generate resolve_btfids_section.S resolve_btfids.test.o
+	$(Q)$(CC) -c -o $@ resolve_btfids_section.S
+	echo "KRAVA"
 
 # Define test_progs test runner.
 TRUNNER_TESTS_DIR := prog_tests
@@ -600,6 +610,7 @@ TRUNNER_EXTRA_FILES := $(OUTPUT)/urandom_read $(OUTPUT)/bpf_testmod.ko	\
 		       verify_sig_setup.sh				\
 		       $(wildcard progs/btf_dump_test_case_*.c)		\
 		       $(wildcard progs/*.bpf.o)
+TRUNNER_EXTRA_DEP := $(OUTPUT)/resolve_btfids_section.o
 TRUNNER_BPF_BUILD_RULE := CLANG_BPF_BUILD_RULE
 TRUNNER_BPF_CFLAGS := $(BPF_CFLAGS) $(CLANG_CFLAGS) -DENABLE_ATOMICS_TESTS
 $(eval $(call DEFINE_TEST_RUNNER,test_progs))
@@ -628,6 +639,7 @@ TRUNNER_TESTS_DIR := map_tests
 TRUNNER_BPF_PROGS_DIR := progs
 TRUNNER_EXTRA_SOURCES := test_maps.c
 TRUNNER_EXTRA_FILES :=
+TRUNNER_EXTRA_DEP :=
 TRUNNER_BPF_BUILD_RULE := $$(error no BPF objects should be built)
 TRUNNER_BPF_CFLAGS :=
 $(eval $(call DEFINE_TEST_RUNNER,test_maps))
