ci: Build with pahole/next
This one contains support for kfunc decl_tags.

--- a/.github/workflows/kernel-build.yml
+++ b/.github/workflows/kernel-build.yml
@@ -91,6 +91,7 @@ jobs:
       - name: Setup build environment
         uses: libbpf/ci/setup-build-env@main
         with:
+          pahole: next
           arch: ${{ inputs.arch }}
           llvm-version: ${{ inputs.llvm-version }}
       - name: Build kernel image
